--- a/base/cpu/intelmpi2018.3-ubuntu16.04/Dockerfile
+++ b/base/cpu/intelmpi2018.3-ubuntu16.04/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get update && \
     apt-get install -y \
     build-essential \
     bzip2 \
+    git=1:2.7.4-0ubuntu1.6 \
     wget \
     cpio && \
     apt-get clean -y && \
@@ -54,4 +55,3 @@ RUN cd /tmp && \
     rm -rf /tmp/l_mpi_${INTEL_MPI_VERSION}* && \
     rm -rf /opt/intel/compilers_and_libraries_${INTEL_MPI_VERSION}/linux/mpi/intel64/lib/debug* && \
     echo "source /opt/intel/compilers_and_libraries_${INTEL_MPI_VERSION}/linux/mpi/intel64/bin/mpivars.sh" >> ~/.bashrc
-
