--- a/base/cpu/openmpi3.1.2-ubuntu16.04/Dockerfile
+++ b/base/cpu/openmpi3.1.2-ubuntu16.04/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get update && \
     apt-get install -y \
     build-essential \
     bzip2 \
+    git=1:2.7.4-0ubuntu1.6 \
     wget \
     cpio && \
     apt-get clean -y && \
