--- a/base/gpu/openmpi3.1.2-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
@@ -1,18 +1,26 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
+FROM mcr.microsoft.com/azureml/o16n-base/python-assets@sha256:c27baec2ee25a627a71c5147031d47b47d54090201f6acd839606e84492c93a3 AS inferencing-assets
 
 # Tag: cuda:9.0-cudnn7-devel-ubuntu16.04
 # Env: CUDA_VERSION=9.0.176
-# Env: NCCL_VERSION=2.4.2
-# Env: CUDNN_VERSION=7.4.2.24
+# Env: CUDA_PKG_VERSION=9-0=9.0.176-1
+# Env: NCCL_VERSION=2.4.8
+# Env: CUDNN_VERSION=7.6.3.30
+# Env: NVIDIA_VISIBLE_DEVICES=all
+# Env: NVIDIA_DRIVER_CAPABILITIES=compute,utility
+# Env: NVIDIA_REQUIRE_CUDA=cuda>=9.0
+# Label: com.nvidia.cuda.version=9.0.176
+# Label: com.nvidia.cudnn.version=7.6.3.30
+# Label: com.nvidia.volumes.needed=nvidia_driver
 # Ubuntu 16.04
-FROM nvidia/cuda@sha256:67e07ae30b7d917e798cbbd3ca04ec0c6882a659c9defe0665fa1178d665cee3
+FROM nvidia/cuda@sha256:5b4a2ecdf7e7594e8f6fc41c0ed0e6a716bfb6ddc0e4852a3dde58eae4692d73
 
 USER root:root
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 ENV DEBIAN_FRONTEND noninteractive
-ENV LD_LIBRARY_PATH "/usr/local/cuda/extras/CUPTI/lib64:${LD_LIBRARY_PATH}"
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64
 ENV NCCL_DEBUG=INFO
 ENV HOROVOD_GPU_ALLREDUCE=NCCL
 
@@ -33,15 +41,33 @@ RUN apt-get update && \
     # Others
     apt-get install -y \
     build-essential \
-    bzip2 \
-    git=1:2.7.4-0ubuntu1.6 \
+    bzip2=1.0.6-8ubuntu0.2 \
+    libbz2-1.0=1.0.6-8ubuntu0.2 \
+    systemd \
+    git=1:2.7.4-0ubuntu1.9 \
     wget \
-    cpio && \
+    cpio \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
 
+# Inference
+# Copy logging utilities, nginx and rsyslog configuration files, IOT server binary, etc.
+COPY --from=inferencing-assets /artifacts /var/
+RUN /var/requirements/install_system_requirements.sh && \
+    cp /var/configuration/rsyslog.conf /etc/rsyslog.conf && \
+    cp /var/configuration/nginx.conf /etc/nginx/sites-available/app && \
+    ln -s /etc/nginx/sites-available/app /etc/nginx/sites-enabled/app && \
+    rm -f /etc/nginx/sites-enabled/default
+ENV SVDIR=/var/runit
+ENV WORKER_TIMEOUT=300
+EXPOSE 5001 8883 8888
+
 # Conda Environment
-ENV MINICONDA_VERSION 4.5.11
+ENV MINICONDA_VERSION 4.7.12.1
 ENV PATH /opt/miniconda/bin:$PATH
 RUN wget -qO /tmp/miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh && \
     bash /tmp/miniconda.sh -bf -p /opt/miniconda && \
