--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -1,7 +1,7 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 
-FROM mcr.microsoft.com/azureml/o16n-base/python-assets@sha256:c27baec2ee25a627a71c5147031d47b47d54090201f6acd839606e84492c93a3 AS inferencing-assets
+FROM mcr.microsoft.com/azureml/o16n-base/python-assets@sha256:f609724dddd9ceacf418667053b5167641d8f2ea41d81686463a3fbd9e9bfd7e AS inferencing-assets
 
 # Tag: cuda:10.1-cudnn7-devel-ubuntu18.04
 # Env: CUDA_VERSION=10.1.243
@@ -44,15 +44,19 @@ RUN apt-get update && \
     # Others
     apt-get install -y \
     build-essential \
-    bzip2=1.0.6-8.1ubuntu0.2 \
-    libbz2-1.0=1.0.6-8.1ubuntu0.2 \
+    bzip2 \
+    libbz2-1.0 \
     systemd \
-    git=1:2.17.1-1ubuntu0.7 \
+    git \
     wget \
     cpio \
     libsm6 \
     libxext6 \
     libxrender-dev \
+    slapd \
+    ldap-utils \
+    util-linux \
+    gnupg \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
@@ -91,3 +95,11 @@ RUN mkdir /tmp/openmpi && \
     make install && \
     ldconfig && \
     rm -rf /tmp/openmpi
+
+# Msodbcsql17 installation
+RUN apt-get update && \
+    apt-get install -y curl && \
+    curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+    curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
+    apt-get update && \
+    ACCEPT_EULA=Y apt-get install -y msodbcsql17
