--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -53,6 +53,8 @@ RUN apt-get update && \
     libsm6 \
     libxext6 \
     libxrender-dev \
+    linux-image-aws \
+    linux-image-azure \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
