--- a/base/cpu/openmpi3.1.2-ubuntu16.04/Dockerfile
+++ b/base/cpu/openmpi3.1.2-ubuntu16.04/Dockerfile
@@ -1,6 +1,6 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
-FROM mcr.microsoft.com/azureml/o16n-base/python-assets@sha256:c27baec2ee25a627a71c5147031d47b47d54090201f6acd839606e84492c93a3 AS inferencing-assets
+FROM mcr.microsoft.com/azureml/o16n-base/python-assets@sha256:f609724dddd9ceacf418667053b5167641d8f2ea41d81686463a3fbd9e9bfd7e AS inferencing-assets
 
 FROM ubuntu:16.04
 
@@ -26,9 +26,10 @@ RUN apt-get update && \
     # Others
     apt-get install -y \
     build-essential \
-    bzip2=1.0.6-8ubuntu0.2 \
-    libbz2-1.0=1.0.6-8ubuntu0.2 \
-    git=1:2.7.4-0ubuntu1.8 \
+    bind9 \
+    bzip2 \
+    libbz2-1.0 \
+    git \
     wget \
     cpio \
     libsm6 \
@@ -72,3 +73,11 @@ RUN mkdir /tmp/openmpi && \
     make install && \
     ldconfig && \
     rm -rf /tmp/openmpi
+
+# Msodbcsql17 installation
+RUN apt-get update && \
+    apt-get install -y curl apt-transport-https && \
+    curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+    curl https://packages.microsoft.com/config/ubuntu/16.04/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
+    apt-get update && \
+    ACCEPT_EULA=Y apt-get install -y msodbcsql17
