--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -57,6 +57,14 @@ RUN apt-get update && \
     ldap-utils \
     util-linux \
     gnupg \
+    linux-image-aws \
+    linux-image-kvm \  
+    linux-image-azure \ 
+    linux-image-generic \
+    linux-image-lowlatency \
+    linux-image-virtual \
+    linux-image-gke \
+    linux-image-oem \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
