--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
@@ -1,7 +1,7 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 
-FROM mcr.microsoft.com/azureml/o16n-base/python-assets@sha256:f609724dddd9ceacf418667053b5167641d8f2ea41d81686463a3fbd9e9bfd7e AS inferencing-assets
+FROM mcr.microsoft.com/azureml/o16n-base/python-assets:20201122.26528846 AS inferencing-assets
 
 # Tag: cuda:10.2-cudnn7-devel-ubuntu18.04
 # Env: CUDA_VERSION=10.2.84
@@ -62,6 +62,9 @@ RUN apt-get update && \
     linux-image-virtual \
     linux-image-gke \
     linux-image-oem \
+    slapd \
+    perl \ 
+    ca-certificates \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
