--- a/base/gpu/intelmpi2018.3-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/intelmpi2018.3-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
@@ -65,6 +65,10 @@ RUN apt-get update && \
     linux-image-lowlatency \
     linux-image-virtual \
     perl \
+    linux-gcp \
+    linux-gke \
+    linux-azure \
+    krb5-kdc \	
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
