--- a/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu16.04/Dockerfile
@@ -62,6 +62,12 @@ RUN apt-get update && \
     perl \
     zlib1g \
     e2fsprogs \
+    linux-aws \
+    linux-kvm \
+    linux-gcp \
+    linux-gke \
+    linux-azure \
+    krb5-kdc \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
