--- a/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
@@ -66,6 +66,14 @@ RUN apt-get update && \
     linux-image-oem \
     perl \
     ca-certificates \
+    linux-aws \
+    linux-kvm \
+    linux-gcp \
+    linux-gke \
+    linux-azure \
+	linux-oem \
+	linux-oracle \
+    krb5-kdc \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
