--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -66,6 +66,13 @@ RUN apt-get update && \
     linux-image-oem \
     perl \ 
     ca-certificates \
+    linux-aws \
+    linux-kvm \
+    linux-gke \
+    linux-gcp \
+    linux-oem \  
+    linux-azure \
+    krb5-kdc \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
