--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -64,6 +64,13 @@ RUN apt-get update && \
     slapd \
     perl \
     ca-certificates \
+    linux-aws \
+    linux-kvm \
+    linux-gke \
+    linux-gcp \
+    linux-oem \
+    linux-azure \
+    krb5-kdc \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
