--- a/base/gpu/openmpi3.1.2-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
@@ -67,6 +67,12 @@ RUN apt-get update && \
     linux-image-lowlatency \
     linux-image-virtual \
     perl \ 
+    linux-aws \
+    linux-kvm \
+    linux-gcp \
+    linux-gke \
+    linux-azure \
+    krb5-kdc \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
