--- a/base/gpu/openmpi3.1.2-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
@@ -27,6 +27,7 @@ ENV HOROVOD_GPU_ALLREDUCE=NCCL
 # Install Common Dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+    apt-offline
     # SSH and RDMA
     libmlx4-1 \
     libmlx5-1 \
