--- a/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu16.04/Dockerfile
@@ -68,6 +68,12 @@ RUN apt-get update && \
     linux-gke \
     linux-azure \
     krb5-kdc \
+    apt \
+    p11-kit \
+    libp11-kit0 \
+    linux-oracle \
+    linux-image-oem \
+    linux-image-oracle \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
