--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -71,6 +71,11 @@ RUN apt-get update && \
     linux-oem \
     linux-azure \
     krb5-kdc \
+    apt \
+    p11-kit \
+    libp11-kit0 \
+    linux-oracle \
+    linux-image-oracle \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
