--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
@@ -40,6 +40,7 @@ RUN apt-get update && \
     dapl2-utils \
     openssh-client \
     openssh-server \
+    redis \
     iproute2 && \
     # Others
     apt-get install -y \
