--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -33,6 +33,7 @@ RUN apt-get update && \
     dapl2-utils \
     openssh-client \
     openssh-server \
+    redis \
     iproute2 && \
     # Others
     apt-get install -y \
