--- a/base/cpu/openmpi3.1.2-ubuntu18.04/Dockerfile
+++ b/base/cpu/openmpi3.1.2-ubuntu18.04/Dockerfile
@@ -37,6 +37,9 @@ RUN apt-get update && \
     libx11-dev \
     apt \
     libp11-kit0 \
+    libglib2.0-0 \
+    libzstd1 \
+    libssl1.0.0 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
