--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
@@ -66,6 +66,8 @@ RUN apt-get update && \
     slapd \
     perl \ 
     ca-certificates \
+    libzstd1 \
+    libglib2.0-0 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
