--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -72,6 +72,8 @@ RUN apt-get update && \
     p11-kit \
     libp11-kit0 \
     tar \
+    libzstd1 \
+    libglib2.0-0 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
