--- a/base/gpu/intelmpi2018.3-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
+++ b/base/gpu/intelmpi2018.3-cuda9.0-cudnn7-ubuntu16.04/Dockerfile
@@ -65,6 +65,7 @@ RUN apt-get update && \
     linux-image-oem \
     linux-image-oracle \ 
     tar \
+    libslp1 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
