--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -76,6 +76,7 @@ RUN apt-get update && \
     libp11-kit0 \
     linux-oracle \
     linux-image-oracle \
+    libnettle6 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
