--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -1,7 +1,7 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 
-FROM mcr.microsoft.com/azureml/o16n-base/python-assets:20210428.36856618 AS inferencing-assets
+FROM mcr.microsoft.com/azureml/o16n-base/python-assets:20210603.39066660 AS inferencing-assets
 
 # Tag: cuda:11.0.3-devel-ubuntu18.04
 # Env: CUDA_VERSION=11.0.3
@@ -67,6 +67,9 @@ RUN apt-get update && \
     libzstd1 \
     libglib2.0-0 \
     libnettle6 \
+    libx11-dev \
+    nginx \
+    liblz4-1 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
