--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -70,6 +70,7 @@ RUN apt-get update && \
     libx11-dev \
     nginx \
     liblz4-1 \
+    libxml2-dev \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
