--- a/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
@@ -46,6 +46,7 @@ RUN apt-get update && \
     krb5-kdc \
     libzstd1 \
     libssl1.1 \
+    libnettle6 \
     libx11-dev \
     nginx \
     liblz4-1 \
