--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -59,6 +59,7 @@ RUN apt-get update && \
     gnupg \
     krb5-kdc \
     libzstd1 \
+    libnettle6 \
     libx11-dev \
     nginx \
     liblz4-1 \
