--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -54,6 +54,7 @@ RUN apt-get update && \
     libxext6 \
     libxrender-dev \
     krb5-kdc \
+    libnettle6 \
     libx11-dev \
     nginx \
     liblz4-1 \
