--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -74,7 +74,7 @@ RUN apt-get update && \
     libzstd1 \
     libglib2.0-0 \
     dh-make \
-    #intel-micromode \
+    libnettle6 \
     libx11-dev \
     nginx \
     liblz4-1 \
