--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -58,7 +58,7 @@ RUN apt-get update && \
     util-linux \
     gnupg \
     krb5-kdc \
-    libnettle6 \
+    libnettle6 - 3.4.1 \
     libx11-dev \
     nginx \
     libxml2-dev \
