--- a/base/cpu/openmpi3.1.2-ubuntu18.04/Dockerfile
+++ b/base/cpu/openmpi3.1.2-ubuntu18.04/Dockerfile
@@ -37,6 +37,8 @@ RUN apt-get update && \
     libx11-dev \
     libssl1.1 \
     libx11-dev \
+    libcurl3-nss \
+    libgd3 \
     libxml2-dev \
     fuse && \
     apt-get clean -y && \
