--- a/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
@@ -36,6 +36,8 @@ RUN apt-get update && \
     libssl1.1 \
     libxrender-dev \
     libx11-dev \
+    libcurl3-nss \
+    libgd3 \
     libxml2-dev \
     fuse && \
     apt-get clean -y && \
