--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
@@ -75,6 +75,8 @@ RUN apt-get update && \
     libglib2.0-0 \
     dh-make \
     libx11-dev \
+    libcurl3-nss \
+    libgd3 \
     nginx \
     fuse && \
     apt-get clean -y && \
