--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
@@ -57,7 +57,9 @@ RUN apt-get update && \
     libssl1.1 \
     libglib2.0-0 \
     libx11-dev \
-    libnettle6 \ 
+    libnettle6 \
+    libcurl3-nss \
+    libgd3 \
     nginx \
     libxml2-dev \
     fuse && \
