--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -56,6 +56,8 @@ RUN apt-get update && \
     krb5-kdc \
     libnettle6 \
     libx11-dev \
+    libcurl3-nss \
+    libgd3 \
     nginx \
     libssl1.1 \
     fuse && \
