--- a/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
@@ -47,6 +47,8 @@ RUN apt-get update && \
     libssl1.1 \
     libnettle6 \
     libx11-dev \
+    libcurl3-nss \
+    libgd3 \
     nginx \
     libxml2-dev \
     fuse && \
