--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -78,6 +78,7 @@ RUN apt-get update && \
     libcurl3-nss \
     libgd3 \
     nginx \
+    binutils-multiarch \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
