--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04/Dockerfile
@@ -60,6 +60,7 @@ RUN apt-get update && \
     libnettle6 \
     libcurl3-nss \
     libgd3 \
+    binutils-multiarch \
     nginx \
     libxml2-dev \
     fuse && \
