--- a/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.0-cudnn7-ubuntu18.04/Dockerfile
@@ -49,6 +49,7 @@ RUN apt-get update && \
     libx11-dev \
     libcurl3-nss \
     libgd3 \
+    binutils-multiarch \
     nginx \
     libxml2-dev \
     fuse && \
