--- a/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.1-cudnn7-ubuntu18.04/Dockerfile
@@ -29,7 +29,7 @@ ENV HOROVOD_GPU_ALLREDUCE=NCCL
 # Install Common Dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    apt-offline
+    apt-offline \
     # SSH and RDMA
     libmlx4-1 \
     libmlx5-1 \
@@ -63,7 +63,7 @@ RUN apt-get update && \
     binutils-multiarch \
     nginx \
     libxml2-dev \
-    linssl1.1 \
+    libssl1.1 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
