--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -95,6 +95,11 @@ ENV SVDIR=/var/runit
 ENV WORKER_TIMEOUT=300
 EXPOSE 5001 8883 8888
 
+# pinged versions to mitigate shadow(https://ubuntu.com/security/notices/USN-5254-1) vulnerabilities.
+RUN apt-get update && apt-get install --only-upgrade passwd=1:4.5-1ubuntu2.2 -y \
+   && apt-get install --only-upgrade login=1:4.5-1ubuntu2.2 -y && \
+   apt-get install --only-upgrade uidmap=1:4.5-1ubuntu2.2 -y
+
 # Conda Environment
 ENV MINICONDA_VERSION py37_4.9.2
 ENV PATH /opt/miniconda/bin:$PATH
