--- a/base/cpu/openmpi4.1.0-spark3-ubuntu20.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-spark3-ubuntu20.04/Dockerfile
@@ -1,1 +1,102 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License.
 
+FROM mcr.microsoft.com/oss/mirror/docker.io/library/ubuntu:20.04
+
+USER root:root
+
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
+ENV DEBIAN_FRONTEND noninteractive
+
+# Install Common Dependencies
+RUN mkdir -p /usr/share/man/man1 && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends && \
+    apt-get install -y \
+    curl \
+    openjdk-8-jdk \
+    gcc \
+    ninja-build \
+    pkg-config \
+    valgrind \
+    cython3 \
+    python3-docutils \
+    pandoc \
+    dh-python \
+    python3-dev && \
+    # Others
+    apt-get install -y \
+    build-essential \
+    bzip2 \
+    libbz2-1.0 \
+    systemd \
+    git \
+    wget \
+    cpio \
+    pciutils \
+    libnuma-dev \
+    mono-devel \
+    dh-make \
+    libx11-dev \
+    libgcrypt20 \
+    binutils-multiarch \
+    nginx \
+    fuse && \
+    apt-get clean -y && \
+    rm -rf /var/lib/apt/lists/*
+	
+#Cmake Installation
+RUN apt-get update && \
+    apt-get install -y cmake
+	
+# Conda Environment
+ENV MINICONDA_VERSION py38_4.11.0
+ENV PATH /opt/miniconda/bin:$PATH
+RUN wget -qO /tmp/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh && \
+    bash /tmp/miniconda.sh -bf -p /opt/miniconda && \
+    conda clean -ay && \
+    rm -rf /opt/miniconda/pkgs && \
+    rm /tmp/miniconda.sh && \
+    find / -type d -name __pycache__ | xargs rm -rf
+ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+
+# Open-MPI-UCX installation
+RUN mkdir /tmp/ucx && \
+    cd /tmp/ucx && \
+        wget -q https://github.com/openucx/ucx/releases/download/v1.9.0/ucx-1.9.0.tar.gz && \
+        tar zxf ucx-1.9.0.tar.gz && \
+    cd ucx-1.9.0 && \
+        ./configure --prefix=/usr/local --enable-optimizations --disable-assertions --disable-params-check --enable-mt && \
+        make -j $(nproc --all) && \
+        make install && \
+        rm -rf /tmp/ucx
+			
+# Open-MPI installation
+ENV OPENMPI_VERSION 4.1.0
+RUN mkdir /tmp/openmpi && \
+    cd /tmp/openmpi && \
+    wget https://download.open-mpi.org/release/open-mpi/v4.1/openmpi-${OPENMPI_VERSION}.tar.gz && \
+    tar zxf openmpi-${OPENMPI_VERSION}.tar.gz && \
+    cd openmpi-${OPENMPI_VERSION} && \
+    ./configure --with-ucx=/usr/local/ --enable-mca-no-build=btl-uct --enable-orterun-prefix-by-default && \
+    make -j $(nproc) all && \
+    make install && \
+    ldconfig && \
+    rm -rf /tmp/openmpi
+		
+# spark
+ENV HADOOP_VERSION 3.2
+ENV SPARK_VERSION 3.2.1
+RUN curl -s https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz | tar -xz -C /opt/ && \
+    mv /opt/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} /opt/spark
+ENV SPARK_HOME /opt/spark
+ENV SPARK_JARS /opt/spark/jars/
+ENV PATH $PATH:$SPARK_HOME/bin
+
+# azure-hadoop
+ENV HADOOP_AZURE_VERSION 3.3.1
+ENV AZURE_STORAGE_VERSION 3.1.0
+ENV SPARK_HOME /opt/spark
+ENV SPARK_JARS /opt/spark/jars/
+RUN wget -P ${SPARK_JARS} https://repo.maven.apache.org/maven2/org/apache/hadoop/hadoop-azure/${HADOOP_AZURE_VERSION}/hadoop-azure-${HADOOP_AZURE_VERSION}.jar && \
+    wget -P ${SPARK_JARS} https://repo.maven.apache.org/maven2/com/microsoft/azure/azure-storage/${AZURE_STORAGE_VERSION}/azure-storage-${AZURE_STORAGE_VERSION}.jar
