--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -25,6 +25,8 @@ RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machi
 # Install Common Dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+    #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
+    openssl - 1.1.1 \
     # SSH and RDMA
     libmlx4-1 \
     libmlx5-1 \
@@ -81,12 +83,21 @@ RUN apt-get update && \
     libgd3 \
     nginx \
     binutils-multiarch \
+    # adding below packages to mitigate the vulnerabilities till libpcre3
+    libcurl3-nss \
+    e2fsprogs \
+    e2fsck-static \
+    fuse2fs \
+    gnupg \
+    gnupg2 \
+    gpg \
+    libdpkg-perl \
+    dpkg \
+    libpcre3 \ 
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
- 
- 
-
+   
 # Inference
 # Copy logging utilities, nginx and rsyslog configuration files, IOT server binary, etc.
 COPY --from=inferencing-assets /artifacts /var/
