--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -26,6 +26,8 @@ RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machi
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     # SSH and RDMA
+    #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
+    openssl - 1.1.1 \
     libmlx4-1 \
     libmlx5-1 \
     librdmacm1 \
@@ -81,6 +83,17 @@ RUN apt-get update && \
     libgd3 \
     nginx \
     binutils-multiarch \
+    # adding below packages to mitigate the vulnerabilities till libpcre3:1873514
+    libcurl3-nss \
+    e2fsprogs \
+    e2fsck-static \
+    fuse2fs \
+    gnupg \
+    gnupg2 \
+    gpg \
+    libdpkg-perl \
+    dpkg \
+    libpcre3 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
